# Drone-sim

./: .gitignore  .gitmodules  README.md  faces.txt  imu_sim.py  main.py  pid.py  pyproject.toml  test.py  track_train.py  vertices.txt
algorithms/feature_extract/: depth_net.py
algorithms/rl/tasks/: avoid_task.py  avoidance_task.py  track_task.py  track_task_test.py
assets/drone_urdf/: cf2x.urdf  drone.urdf
config/: env.yaml  imu_sim_param.yaml  mavlink_param.yaml  pid_param.yaml
config/demos/back2nt_eval/: genesis_env.yaml
config/demos/pos_ctrl_eval/: flight.yaml  genesis_env.yaml
config/demos/rc_FPV_eval/: genesis_env.yaml
config/flight/: env.yaml  mavlink_param.yaml  pid_param.yaml
config/learning/: feature_extract.yaml
config/rl_task/: avoid.yaml  avoidance.yaml  track.yaml  track_task.yaml  track_train.yaml
config/sim_env/: env.yaml  env_eval.yaml  flight.yaml
config/tasks/avoid_rsl/: genesis_env.yaml  rl_env.yaml
config/tasks/track_rsl/: flight.yaml  genesis_env.yaml
controller/: imu_sim.py  mavlink_sim.py  pid.py
env/: genesis_env.py  map.py  map_gen.py  test_env.py
env/maps/: forest.py
eval/run1/: checkpoint0000.pth  checkpoint0002.pth  config.yaml
flight/: imu_sim.py  mavlink_sim.py  odom.py  pid.py  ros_interface.py
learning/feature_extract/: depth_net.py  net.py  net_test.py  test.py
learning/rl/: genesis_vecenv.py
learning/rl/tasks/: avoidance_task.py  obstacle_avoidance_task.py  track_task.py
logs/back2nt/: checkpoint0003.pth  checkpoint0004.pth
logs/rsl_avoid/rsl_avoid_2025-08-01_09:33:00/: events.out.tfevents.1754012004.ls-pc.2340735.0
logs/rsl_avoid/rsl_avoid_2025-08-01_09:34:30/: events.out.tfevents.1754012102.ls-pc.2348725.0
logs/rsl_avoid/rsl_avoid_2025-08-01_09:35:21/: events.out.tfevents.1754012152.ls-pc.2354559.0
logs/rsl_avoid/rsl_avoid_2025-08-01_09:50:49/: events.out.tfevents.1754013083.ls-pc.2371781.0
logs/rsl_avoid/rsl_avoid_2025-08-01_09:58:09/: events.out.tfevents.1754013555.nyf-Acer.12621.0
logs/rsl_avoid/rsl_avoid_2025-08-01_10:12:30/: events.out.tfevents.1754014373.ls-pc.2411283.0
logs/rsl_avoid/rsl_avoid_2025-08-01_10:13:43/: events.out.tfevents.1754014454.ls-pc.2420357.0
logs/run1/: checkpoint0001.pth
scene/3d_gen_cpp/: CMakeLists.txt  build.sh
scene/3d_gen_py/: faces.txt  ply2stl.py  vertices.txt  vis.py
scripts/: test.py
scripts/eval/: back2nt_eval.py  pos_ctrl_eval.py  rc_FPV_eval.py
scripts/train/: avoid_rsl.py  track_rsl.py
sensors/: genesis_lidar.py  lidar.py
sensors/LidarSensor/: lidar_sensor.py  setup.py
src/: imu_sim.py  main.py  mavlink.py  mavlink_sim.py  pid.py
train/: net.py
urdf/: cf2x.urdf
utils/: heapq.py  heapq_.py  mesh_convex_decomposition.py  ply2stl.py  vis_vert_face.py
(+141 files in other folders)
