[tool.poetry]
name = "genesis-drone-env"
version = "1.0.3"
description = "Genesis Drone Environment"
authors = ["Xian Wang <xianwang@zju.edu.cn>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KafuuChikai/GenesisDroneEnv.git"
packages = [
    { include = "genesis_drone_env" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorboard = "*"
torch = ">=1.4.0"
torchvision = ">=0.5.0" 
numpy = ">=1.16.4"
open3d = "*"
rsl-rl = { git = "https://github.com/leggedrobotics/rsl_rl.git", tag = "v1.0.2" }
pymavlink = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"