[tool.poetry]
name = "genesis-drone"
version = "1.0.3"
description = "Genesis Drone Environment"
authors = ["YifeiNie <yifnie@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YifeiNie/Drone-sim"
packages = [
    { include = "flight" }, 
    { include = "sensors" },
    { include = "env" },
    { include = "algorithms" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorboard = "*"
torch = ">=1.4.0"
torchvision = ">=0.5.0" 
numpy = ">=1.16.4"
open3d = "*"
pyserial ="*"
pymavlink = "*"
pyyaml = "*"
rsl-rl-lib = { path = "./algorithms/rl/rsl_rl", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"